Make collapsed list fixed, add margins to project-posts

--- a/src/pages/projects/projects.scss
+++ b/src/pages/projects/projects.scss
@@ -19,7 +19,7 @@
 
   // collapsed list
   &.collapsed {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,7 +29,7 @@
 
     #{$r}__item {
       list-style: none;
-      margin: 0 10px;
+      margin: 0 15px;
 
       &-link {
         display: inline-block;
@@ -72,7 +72,7 @@
 
 .project-posts {
   display: none;
-  margin: 0 40px;
+  margin: 0 30px 0 40px;
 
   &.active {
     display: block;
